exports[`test renders appropriately (when syncing) 1`] = `
<div
  className="repo-tools-refresh">
  <button
    className="repo-tools-refresh-button"
    disabled="disabled"
    onClick={[Function]}>
    <span />
  </button>
</div>
`;

exports[`test renders appropriately 1`] = `
<div
  className="repo-tools-refresh">
  <button
    className="repo-tools-refresh-button"
    disabled={null}
    onClick={[Function]}>
    <span />
  </button>
</div>
`;
